@@ -32,7 +32,7 @@
         <div tal:replace="structure provider:plone.abovecontentbody" />
 
         <metal:listingmacro define-macro="listing">
-        <tal:topiccontents define="topicContents python:here.queryCatalog(batch=True);
+        <tal:topiccontents define="topicContents view/topicContents;
                                    batch topicContents;">
 
             <tal:listing condition="topicContents">
@@ -46,13 +46,16 @@
             
             <metal:text use-macro="context/atct_topic_view/macros/text-field-view" />
 
-            <tal:default condition="not:here/getCustomView|nothing"
-                         define="folderContents topicContents">
-                <metal:listing metal:use-macro="here/folder_listing/macros/listing">
+            <dl tal:condition="not:here/getCustomView|nothing">
+              <tal:group repeat="group view/groups">
+                <dt tal:content="group/key">Group</dt>
+                <dd tal:define="folderContents group/contents;">
+                  <metal:listing metal:use-macro="here/folder_listing/macros/listing">
                     <metal:empty metal:fill-slot="no_items_in_listing"></metal:empty>
-                </metal:listing>
-
-            </tal:default>
+                  </metal:listing>
+                </dd>
+              </tal:group>
+            </dl>
 
             </tal:listing>
 
